
    TODO: Refactor status menu item output menu generation to share code between ScriptExec and Platypus.app
    TODO: Drag and drop from icon view should be file based, not TIFF pasteboard data
    TODO: Treat drop into STPathTextField like any other drop, don't let editor swallow it
    TODO: Make the type lists in drop settings editable like those in Args controller

    * Uniform Type Identifiers and Application Bundle Identifiers are now validated
    * New template processing option for Status Item icon
    * Build script now generates sparkle hash
    * More robust command line tool version checking
    * Fixed issue where showing the Preferences window lagged due to icon fetching on main thread
    * Args button title now shows the number of custom arguments that have been set
    * UTIs are now the default in Drop Settings (public.item and public.folder)
    * Move project over to ARC

For 5.0
    * Long GNU named params for command line tool, e.g. --some-option
    * Fixed issue where ScriptExec quit before script output was parsed
    * Add new examples Icns2Iconset, ImageResizer
    * Integrated CFBundleVersion increment script into build process
    * Updated keys in information property lists
    * Added ALERT: example
    * Added authenticated execution example
    * Optimize Location: parsing for Web Output
    * Parsed commands are now removed from script text output
    * Fixed bug where Status Item menu intermittently showed empty output
    * New high res images for documentation
    * Added example showing STATUSMENUICON: syntax in action
    * Migrated source to modern Objective-C syntax (literals, properties etc.)
    * Now using bindings for defaults
    * Implemented UI stuff making clear that UTIs exclude suffixes
    * Fixed issue where a status menu could display an empty menu if clicked repeatedly
    * Use UTI methods instead of deprecated imageFileTypes